--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
             <div class="field">
                 <span class="label">Password:</span>
                 <input type="password" required/>
-                <a href="" class="help" ng-click="showHelp();$event.stopPropagation();">?</a>
+                <a href="" class="help" ng-mouseover="showHelp()" tooltip tooltip-text="passwordTip">?</a>
             </div>
             <button class="sign-up" type="submit">Sign Up</button>
         </div>
     </div>
+
 
     <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
